force-app/main/default/objects/Location_Administration__c/Location_Administration__c.object-meta.xml
<CustomObject>
    <label>Location Administration</label>
    <nameField>
        <displayFormat>LA-{000000}</displayFormat>
        <label>Location Administration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Administration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>