force-app/main/default/objects/Location_Administration__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Location Administration</relationshipLabel>
    <relationshipName>Location_Administration</relationshipName>
    <type>Lookup</type>
</CustomField>