force-app/main/default/objects/Location_Administration__c/fields/Number_of_days_requested__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_requested__c</fullName>
    <formula>End_Date__c -  Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>