force-app/main/default/objects/Location_Administration__c/fields/Number_of_Sanification__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sanification__c</fullName>
    <label>Number of Sanification</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>