force-app/main/default/objects/Location_Administration__c/fields/Reserved_Seats__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Seats__c</fullName>
    <label>Reserved Seats</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>