force-app/main/default/objects/Location_Administration__c/fields/Total_Seats_Morning__c.field-meta.xml
<CustomField>
    <fullName>Total_Seats_Morning__c</fullName>
    <label>Total Seats Morning</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>