force-app/main/default/objects/Location_Administration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Seats_Afternoon__c</columns>
    <columns>Total_Seats_Morning__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>